@@ -6,12 +6,10 @@ class Subscription < ActiveRecord::Base
   after_destroy :remove_user_from_list
 
   def add_user_to_list
-    twitter_auth = TwitterHttpAuth.new
-    twitter_auth.base.list_add_member(twitter_auth.username, list.name, user.twitter_id)
+    TWITTER_HTTP_AUTH.base.list_add_member(TWITTER_HTTP_AUTH.username, list.name, user.twitter_id)
   end
 
   def remove_user_from_list
-    twitter_auth = TwitterHttpAuth.new
-    twitter_auth.base.list_remove_member(twitter_auth.username, list.name, user.twitter_id)
+    TWITTER_HTTP_AUTH.base.list_remove_member(TWITTER_HTTP_AUTH.username, list.name, user.twitter_id)
   end
 end
