@@ -1,4 +1,3 @@
-# TODO Refactoring: caching functionallity + sinleton
 class TwitterHttpAuth
   def initialize
     @username = ConsumerConfig['user']['username']
@@ -16,18 +15,27 @@ class TwitterHttpAuth
 
   def tweets_from_lists(lists, limit)
     lists_tweets = {}
-    lists.each{|l| lists_tweets[l.name] = base.list_timeline(username, l.name, :per_page => limit)}
+    lists.each{|list| lists_tweets[list.name] = base.list_timeline(username, list.name, :per_page => limit)}
     lists_tweets
   end
 
   def members_from_lists(lists)
     lists_members = {}
-    lists.each{|l| lists_members[l.name] = base.list_members(username, l.name, -1).users.compact}
+    lists.each{|list| lists_members[list.name] = base.list_members(username, list.name, -1).users.compact}
     lists_members
   end
 
-  def refresh_lists_in_database
-    base.lists(username).lists.each{ |l| List.find_or_create_by_name(l.name)}
+  def update_lists_in_database_from_twitter
+    base.lists(username).lists.each{ |list| List.find_or_create_by_name(list.name)}
+  end
+
+  def update_subscriptions_in_database_from_twitter
+    List.all.each do |list|
+      base.list_members(username, list.name).users.compact!.each do |u|
+        user = User.find_or_create_by_screen_name(u.screen_name)
+        Subscription.find_or_create_by_user_id_and_list_id(user.id, list.id)
+      end
+    end
   end
 
   private
@@ -35,5 +43,14 @@ class TwitterHttpAuth
     httpauth = Twitter::HTTPAuth.new(@username, @password)
     Twitter::Base.new(httpauth)
   end
+
+  public
+  @@instance = TwitterHttpAuth.new
+
+  def self.instance
+    return @@instance
+  end
+  private_class_method :new
 end
 
+TWITTER_HTTP_AUTH = TwitterHttpAuth.instance
