@@ -6,11 +6,11 @@
     = stylesheet_link_tag 'compiled/application.css', :media => 'screen, projection'
     %link(rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico")
     %title
-      = SITE_TITLE
+      = G140[:site_name]
   %body.two-column
     #header
       .logo
-        %h1= SITE_TITLE
+        %h1= G140[:site_name]
       .navigation
         = render_navigation
         
