@@ -1,1 +1,5 @@
-SITE_TITLE = "140.mk"
+G140 = {
+  :site_title => "140.mk",
+  :front_page_lists_count => 6,
+  :front_page_tweets_per_list => 5
+}
